--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ pur_beurre/pur_beurre/__pycache__
 pur_beurre/off/__pycache__/
 pur_beurre/off/management/
 pur_beurre/off/migrations/__pycache__/
+pur_beurre/settings/production.py
+
